--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@antify/validate",
   "private": false,
-  "version": "1.2.2",
+  "version": "1.3.1",
   "description": "",
   "license": "MIT",
   "sideEffects": false,
@@ -27,14 +27,15 @@
     "test": "pnpm lint && vitest run"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config-typescript": "latest",
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@vue/reactivity": "^3.3.4",
     "c8": "latest",
     "eslint": "latest",
     "standard-version": "latest",
     "typescript": "latest",
     "unbuild": "latest",
-    "vitest": "latest"
+    "vitest": "latest",
+    "vue": "^3.3.4"
   },
   "packageManager": "pnpm@7.0.0",
   "repository": {
